[project]
name = "paperdb"
version = "0.1.0"
description = "CLI tool to render a Google Sheets paper DB into Markdown"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
  "tabulate>=0.9.0",
]

[project.scripts]
paperdb = "paperdb.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = [
    "paperdb",
]
